Atualização de segundo parágrafo

--- a/site_exemplo/index.html
+++ b/site_exemplo/index.html
@@ -9,5 +9,7 @@
     <h1>Olá, mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat commodi amet fuga fugiat autem ut. Quae voluptatem itaque nobis amet quam sed mollitia expedita perferendis explicabo. Commodi magni maxime deleniti.</p>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure repellendus accusantium, reprehenderit, assumenda voluptate odit atque quas dolores ullam facere laboriosam iusto quibusdam praesentium fuga, accusamus laudantium! Consectetur, perspiciatis iste.</p>
 </body>
 </html>
